--- a/public/css/global.css
+++ b/public/css/global.css
@@ -5,14 +5,14 @@
 
     --theme-color: #4f8ac9;
 
-    --post-bg: rgb(242, 242, 242);
-    --post-border: rgb(230, 230, 230);
+    --post-bg: rgb(250, 250, 250);
+    --post-border: black;
     --post-divider: rgb(129, 129, 129);
 }
 
 body, html {
     margin: 0;
-    font-family: system-ui, sans-serif;
+    font-family: sans-serif;
     line-height: var(--line-height);
 }
 
@@ -89,7 +89,13 @@ main {
     padding: 2em 1em;
     display: flex;
     flex-direction: column;
-    gap: 3em;
+    gap: 2em;
+}
+
+.posts-list {
+    display: flex;
+    flex-direction: column;
+    gap: .25em;
 }
 
 /*  */
@@ -103,11 +109,10 @@ header {
     flex-wrap: wrap;
     align-items: center;
 }
-
-header > * {
-    min-width: 1em;
+header a {
     text-align: center;
 }
+
 header > .grow {
     text-align: left;
 }
