--- a/public/views/home.ejs
+++ b/public/views/home.ejs
@@ -75,7 +75,7 @@
             <% } %>
     
             <% if (feed.length == 0) { %>
-                <p><i>there are no posts here yet. you'll be the first to make one!</i></p>
+                <p><i>there are zero posts on this website!</i></p>
             <% } %>
     
             <% if (page == max_page) { %>
