--- a/public/views/post.ejs
+++ b/public/views/post.ejs
@@ -5,6 +5,11 @@
     <link rel="stylesheet" href="<%= root %>css/index.css">
     <%- include ('fragments/global-head.ejs') %>
     <title><%= title %></title>
+    <style>
+        .posts-list {
+            width: var(--max-post-width);
+        }
+    </style>
 </head>
 <body>
 
