--- a/public/views/fragments/global-head.ejs
+++ b/public/views/fragments/global-head.ejs
@@ -4,5 +4,5 @@
 <link rel="icon" type="image/png" href="<%= root %>res/icons/32x32.png">
 <link rel="stylesheet" href="<%= root %>css/global.css">
 <link rel="stylesheet" href="<%= root %>css/responsive.css">
-<link rel="apple-touch-icon" sizes="192x192" href="<%= root %>res/icons/192.png">
-<link rel="apple-touch-icon" sizes="512x512" href="<%= root %>res/icons/512.png">
+<link rel="apple-touch-icon" sizes="192x192" href="<%= root %>res/icons/192x192.png">
+<link rel="apple-touch-icon" sizes="512x512" href="<%= root %>res/icons/512x512.png">
