--- a/public/css/new.css
+++ b/public/css/new.css
@@ -4,30 +4,24 @@ main {
     justify-content: space-between;
     gap: 5em;
 }
-main > div:first-child {
+main:has(.post) > div:first-child {
     max-width: 50%;
     padding-bottom: 50vh;
 }
 
-@media only screen and (max-width: 767px) {
-    main {
-        flex-direction: column;
-    }
-    main > div:first-child {
-        padding: 0 1em;
-        padding-bottom: 0;
-        max-width: unset;
-    }
+.post {
+    width: fit-content;
+    min-width: 10em;
+    max-width: var(--max-post-width);
 }
 
-input[type="button"], button, main a {
+main > div:first-child button, main a {
     color: black;
     border-color: black;
 }
 main a:hover, main a:active,
-button:hover, button:active,
-input[type="button"]:hover, input[type="button"]:active {
-    background-color: black;
+main > div:first-child button:hover, main > div:first-child button:active {
+    background-color: lightgray;
 }
 
 label, .replying-to, .options, .buttonbar, .drop-zone {
@@ -41,6 +35,7 @@ input::placeholder, textarea::placeholder {
 input[type="text"], textarea {
     border: 1px dotted black;
     padding: .5em;
+    border-radius: 0;
 }
 
 input[type="text"]:focus, textarea:focus {
@@ -59,7 +54,6 @@ input[type="file"] {
 /* post builder */
 
 #post-builder {
-    max-width: calc(100% - 1em);
     width: var(--max-post-width);
     box-sizing: border-box;
 }
@@ -99,6 +93,8 @@ textarea {
     margin: 0;
 }
 
+/* upload block */
+
 .block.upload .center {
     width: 100%;
     position: absolute;
@@ -121,9 +117,76 @@ textarea {
     border-style: solid;
 }
 
-/*  */
+/* record block */
 
-.post {
-    width: fit-content;
-    min-width: 10em;
+.rec .wrapper {
+    font-family: monospace;
+    box-sizing: border-box;
+    margin: auto;
+    padding: .5em;
+    border: 1px dotted black;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: .5em;
+    align-items: center;
+}
+.rec img {
+    height: 10em;
+}
+
+.rec.recording .wrapper {
+    border-color: red;
+}
+.rec .wrapper button {
+    display: none;
+}
+.rec.recording .wrapper button {
+    border-color: red;
+    color: red;
+    display: block;
+}
+
+.draw {
+    text-align: center;
+}
+.draw canvas {
+    border: 1px dotted black;
+}
+.draw .buttons {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-family: monospace;
+    display: flex;
+    flex-direction: column;
+    gap: .5em;
+}
+.draw .buttons button {
+    background: white;
+    border: 1px dotted black;
+    width: 5em;
+}
+.draw .buttons button img {
+    vertical-align: middle;
+}
+.draw .buttons button.selected {
+    border-style: solid;
+}
+
+@media only screen and (max-width: 767px) {
+    main {
+        flex-direction: column;
+    }
+    main > div:first-child {
+        padding: 0 1em;
+        padding-bottom: 0;
+        max-width: unset;
+    }
+    .post {
+        max-width: unset;
+    }
+    #post-builder {
+        max-width: calc(100% - 1em);
+    }
 }
