--- a/public/views/new.ejs
+++ b/public/views/new.ejs
@@ -148,8 +148,8 @@
         <div class="draw block" data-type="image">
             <canvas width="300" height="300"></canvas>
             <div class="buttons">
-                <button class="pencil"><img src="<%= root %>res/pencil.png"></button>
-                <button class="eraser"><img src="<%= root %>res/eraser.png"></button>
+                <button class="pencil"><img src="<%= root %>res/pencil.png" alt="pencil" title="pencil"></button>
+                <button class="eraser"><img src="<%= root %>res/eraser.png" alt="eraser" title="eraser"></button>
             </div>
             <%- include('fragments/post-options.ejs') %>
         </div>
