--- a/public/css/new.css
+++ b/public/css/new.css
@@ -4,9 +4,11 @@ main {
     justify-content: space-between;
     gap: 5em;
 }
+main > div:first-child {
+    padding-bottom: 50vh;
+}
 main:has(.post) > div:first-child {
     max-width: 50%;
-    padding-bottom: 50vh;
 }
 
 .post {
