custom audio player

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -87,6 +87,50 @@ input[type="button"]:hover, input[type="button"]:active {
     text-decoration: none;
 }
 
+/*Range Reset*/
+input[type="range"] {
+    background: transparent;
+    cursor: pointer;
+    width: 100%;
+}
+
+input[type="range"]:focus {
+    outline: none;
+}
+
+/* slider track */
+input[type="range"]::-webkit-slider-runnable-track,
+input[type="range"]::-moz-range-track,
+input[type="range"]::-moz-range-progress {
+    background-color: black;
+    border-radius: 0.5rem;
+    height: 0.5rem;  
+}
+
+input[type="range"]::-moz-range-thumb {
+    border: none; /*Removes extra border that FF applies*/
+    border-radius: 0; /*Removes default border-radius that FF applies*/
+}
+
+input[type="range"]::-webkit-slider-thumb,
+input[type="range"]::-moz-range-thumb {
+    background-color: white;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+}
+
+input[type="range"]:focus::-webkit-slider-thumb,
+input[type="range"]:focus::-moz-range-thumb {
+    border: none;
+    outline: 2px dotted white;
+    outline-offset: 2px;
+}
+
+input[type="range"]::-moz-range-progress {
+    background-color: lightgray;
+}
+
 /* layout */
 
 main {
