--- a/public/views/fragments/header.ejs
+++ b/public/views/fragments/header.ejs
@@ -1,3 +1,5 @@
+<pre style="display: none" id="root"><%= root %></pre>
+
 <header>
     <a href="<%= root %>">untitled social</a>
     <a href="<%= root %>new" class="new-post-button">+</a>
