--- a/public/views/new.ejs
+++ b/public/views/new.ejs
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-    <pre style="display: none" id="root"><%= root %></pre>
     <div style="display: none" id="replying_to">
         <% if (locals.replying_to) { %>
             <%= replying_to.path %>
@@ -40,7 +39,7 @@
             <p>
                 <details>
                     <summary>formatting tips</summary>
-                    <p>hello. here are some ways to spice up your text, if you want to. (this website uses a slightly modified version of markdown.)</p>
+                    <p>hello. here are some ways to spice up your text, if you want to. (this website uses a modified version of markdown formatting.)</p>
                     <table>
                         <tr>
                             <th>STYLE</th>
